# brick-timeseries-server

./: README.md  docker-compose.yml  postgres.env
docker/pg/: Dockerfile  setup.sql
frontend/: Dockerfile  app.py  pyproject.toml
