[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.0"}
rdflib = "^6.3.2"
pyshacl = "^0.20.0"
pydantic = "^1.10.7"
sparqlwrapper = "^2.0.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
